# astro-toyz

./: .gitignore  MANIFEST.in  readme.md  setup.cfg  setup.py
astro_toyz/: __init__.py  config.py  tasks.py  viewer.py
astro_toyz/static/: astro.css  astro.js  catalog.js  template.css  template.js  viewer.js
astro_toyz/static/icons/: detect.xcf  querystar.xcf
astro_toyz/templates/: template.html
astrotoyz/: __init__.py  catalog.py  config.py  core.py  detect_sources.py  index.py  io.py  setup_package.py  sex.py  tasks.py  viewer.py
astrotoyz/astromatic/: __init__.py  api.py  psfex.py  scamp.py  sex.py  swarp.py
astrotoyz/data_types/: __init__.py  astropy_table.py
astrotoyz/static/: astro.css  catalog.js  sextractor.js  viewer.js
astrotoyz/static/icons/: align.xcf  redraw.xcf  refresh.xcf  selectstar.xcf
astrotoyz/templates/: sextractor.html
