[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astrotoyz
description = Astronomy tools built on the Toyz framework
long_description = GUI built on toyz framework to use astropy and more
author = Fred Moolekamp
author_email = fred.moolekamp@gmail.com
license = BSD 3-clase
url = https://github.com/fred3m/astro-toyz
edit_on_github = False
github_project = fred3m/astro-toyz
